WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253655
[GPU Process] Have one copy of NativeImage when it is shared between WebProcess and GPUProcess
https://bugs.webkit.org/show_bug.cgi?id=253655
Summary
[GPU Process] Have one copy of NativeImage when it is shared between WebProce...
Said Abou-Hallawa
Reported
2023-03-09 09:39:30 PST
Since WebProcess has to share the local PlatformImage with GPUProcess through ShareableBitmap, we can get rid of the local PlatformImage and have both processes use the ShareableBitmap. Also for GPUProcess, we can ensure we decode the PlatformImage for sizeForDrawing instead of decoding it for the full size.
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2023-03-09 10:28:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11311
Radar WebKit Bug Importer
Comment 2
2023-03-09 10:28:12 PST
<
rdar://problem/106508715
>
EWS
Comment 3
2023-03-15 11:48:52 PDT
Committed
261700@main
(00ca303e3374): <
https://commits.webkit.org/261700@main
> Reviewed commits have been landed. Closing PR #11311 and removing active labels.
Diego Pino
Comment 4
2023-03-15 18:11:07 PDT
WebKitGTK and WPE Ubuntu 20.04 post-commit build bots are failing after this patch:
https://build.webkit.org/#/builders/595/builds/8429/steps/9/logs/stdio
``` /home/buildbot/worker/GTK-Linux-64-bit-Release-Ubuntu-2004-Build/build/Source/WebCore/platform/graphics/DecodingOptions.h:48:53: error: ‘bool WebCore::DecodingOptions::operator==(const WebCore::DecodingOptions&) const’ cannot be defaulted 48 | bool operator==(const DecodingOptions&) const = default; ``` Default comparisons by value (P1946R0) is only available since GCC10. -
https://en.cppreference.com/w/cpp/compiler_support/20
These bots use GCC9.4, which we need to support until 20th April 2023. -
https://trac.webkit.org/wiki/WebKitGTK/GCCRequirement
Diego Pino
Comment 5
2023-03-15 18:12:09 PDT
Re-opening for pull request
https://github.com/webkit/webkit/pull/11586
EWS
Comment 6
2023-03-15 18:59:10 PDT
Committed
261725@main
(caaf11e8a339): <
https://commits.webkit.org/261725@main
> Reviewed commits have been landed. Closing PR #11586 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug